# qute-code-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  INVENTORY.md  README.md  WORKFLOW.md  external-plugins.json  jimek.yml  manage-clients.sh  pyproject.toml  setup-project.bat  setup-project.sh
.claude-plugin/: marketplace.json
project-templates/archive-quant/: .env.example  README.md  pyproject.toml
project-templates/archive-quant/.ai/: code-quality.md  datasets.md  documentation.md  general-rules.md  python-rules.md
project-templates/archive-quant/.ai/templates/: dataset_template.md
project-templates/archive-quant/.claude/: settings.json
project-templates/archive-quant/.claude/commands/: explore.md  gist-preview.md  run-ml.md  session-update.md  session.md
project-templates/archive-quant/.claude/hooks/: mcp-agent-eval-hook.py
project-templates/archive-quant/.claude/skills/ai-review/: review.py
project-templates/archive-quant/.claude/skills/analizy-pl-data/: SKILL.md
project-templates/archive-quant/.claude/skills/mlflow/: skill.md
project-templates/archive-quant/.claude/skills/worktrees/: apps.md
project-templates/archive-quant/.gemini/: settings.json
project-templates/archive-quant/.mcp/context7/: .mcp.json
project-templates/archive-quant/.mcp/firecrawl/: .mcp.json
project-templates/archive-quant/.mcp/mcp-obsidian/: .mcp.json
project-templates/archive-quant/.mcp/notionApi/: .mcp.json
project-templates/archive-quant/.mcp/supabase/: .mcp.json
project-templates/archive-quant/.mcp/vercel/: .mcp.json
project-templates/archive-quant/templates/: BACKLOG.md  IN_PROGRESS.md
project-templates/quant/: .env.example  CLAUDE.md  pyproject.toml
project-templates/quant/.claude/: .toolkit-manifest.json  settings.json
project-templates/quant/.claude/agents/: mlflow-analyzer.md  python-reviewer.md
project-templates/quant/.claude/agents/research-paper-analyst/: AGENT.md  templates.md
project-templates/quant/.claude/rules/: datasets.md  decisions.md  general-rules.md  git-workflow.md  python-rules.md  work-organization.md
project-templates/quant/.claude/skills/gist-transcript/: SKILL.md
project-templates/quant/.claude/skills/investment-research-formal/: SKILL.md
project-templates/quant/.claude/skills/market-data-fetcher/: SKILL.md
project-templates/quant/.claude/skills/market-datasets/: SKILL.md
project-templates/quant/.claude/skills/matplotlib/: SKILL.md
project-templates/quant/.claude/skills/plotly/: SKILL.md
project-templates/quant/.claude/skills/polars/: SKILL.md
project-templates/quant/.claude/skills/qrd/: factor-taxonomy.md  performance-metrics.md:Zone.Identifier
project-templates/quant/.claude/skills/skill-assessment/: SKILL.md
project-templates/quant/.claude/skills/statsmodels/: SKILL.md
project-templates/quant/.mcp/postgres/: .mcp.json
project-templates/webdev/: .env.example  .gitignore  pyproject.toml
project-templates/webdev/.claude/: .toolkit-manifest.json
project-templates/webdev/.claude/agents/: code-refactorer.md  frontend-designer.md  prd-writer.md  project-task-planner.md  security-auditor.md
project-templates/webdev/.claude/rules/: code-quality.md  context-management.md  decisions.md  documentation.md
project-templates/webdev/.claude/skills/context-management/: SKILL.md
project-templates/webdev/.mcp/fetch/: .mcp.json
project-templates/webdev/.mcp/figma/: .mcp.json
project-templates/webdev/.mcp/memory/: .mcp.json
project-templates/webdev/.mcp/sequential-thinking/: .mcp.json
(+576 files in other folders)
