[project]
name = "quantlab"
version = "0.1.0"
description = "A comprehensive quantitative trading and investment management system"
authors = [{ name = "Tom Lupo", email = "twilczega@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "yfinance==0.2.28",
    "ccxt>=4.0.0",
    "duckdb>=0.8.0",
    "pyarrow>=12.0.0",
    "luigi>=3.3.0",
    "PyYAML>=6.0",
    "python-binance>=1.0.19",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "dill>=0.3.6",
    "jinja2>=3.1.0",
    "papermill>=2.4.0",
    "vectorbt>=0.25.0",
    "pingouin>=0.5.0",
    "pyswarms>=1.3.0",
    "tslearn>=0.6.0",
    "slack-sdk>=3.21.0",
    "openpyxl>=3.1.0",
    "pandas-market-calendars>=4.0.0",
    "sqlalchemy>=2.0.0",
    "diskcache>=5.6.0",
    "numba>=0.58.0",
    "psycopg2-binary>=2.9.0",
    "arch>=6.0.0",
    "quantstats>=0.0.62",
    "tabulate>=0.9.0",
    "statsmodels>=0.14.0",
    "PyPortfolioOpt>=1.5.0",
    "plombery>=0.4.1",
    "websockets==11.0.3",
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    # DVC with Google Drive support
    "dvc[gdrive]>=3.0.0",
    "cryptography>=41.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.108.0",
    "PyDrive2>=1.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "quantlab",
]


